--- a/styles.css
+++ b/styles.css
@@ -428,7 +428,7 @@ label[class~="show_event_text"] span.ui-button-text {
 }
 
 
-label[class~="show_timelineshift_text"] span.ui-button-text {
+label[class~="show_timeshift_text"] span.ui-button-text {
   border-top: 1px solid;
   border-right: 1px solid;
   border-bottom: 1px solid;
