--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ A:active
    text-decoration: none;
 }
 
-h1 
+h1
 {
    font: bold 18pt/22pt helvetica, sans-serif;
    color: rgb(12,17,142);
@@ -30,7 +30,7 @@ h1
 h2
 {
    font: bold 14pt/16pt helvetica;
-   color: rgb(12,17,142); 
+   color: rgb(12,17,142);
    margin-left: 0.1em;
    margin-right: 0.1em;
 }
@@ -46,7 +46,7 @@ h3
 h4
 {
    font: bold 12pt/14pt helvetica;
-   color: rgb(12,17,142); 
+   color: rgb(12,17,142);
    margin-left: 0.1em;
    margin-right: 0.1em;
 }
@@ -159,7 +159,7 @@ td.down
    background: rgb(255,153,153);
 }
 
-th 
+th
 {
    font: bold 12pt/14pt helvetica, sans-serif;
    color: rgb(238,238,238);
@@ -202,7 +202,7 @@ white-space:nowrap;
 {
 border:0;
 }
-.icon16 
+.icon16
 {
 height:16px;width:16px;border:0;
 }
@@ -300,7 +300,7 @@ button.cupid-green {
   text-shadow: 0 -1px 0 #4c9021;
   font: 8px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
   padding: 0px 2px 0px 2px;
-  
+
   }
   button.cupid-green:hover {
     background-color: #76b347;
@@ -388,12 +388,12 @@ button.shiny-blue {
 .ui-timepicker-rtl dl { text-align: right; }
 .ui-timepicker-rtl dl dd { margin: 0 65px 10px 10px; }
 
-label[class~="show_event_text"] span.ui-button-text {
-  font-size: 60% !important
+label[class~="show_event_text"] {
+    font-size: 8px !important;
 }
 
-label[class~="show_timeshift_text"] span.ui-button-text {
-  font-size: 60% !important
+label[class~="show_timeshift_text"] {
+    font-size: 8px !important;
 }
 
 .ganglia-qtip {
@@ -408,4 +408,3 @@ label[class~="show_timeshift_text"] span.ui-button-text {
   float: left;
   margin: 0 0 10px 10px;
 }
-
